moved logout button and prevent overlap of about links with nav links

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -19,6 +19,8 @@
 
     display: grid;
     grid-template-rows: 111px auto;
+
+    padding-bottom: 96px;
 }
 
 .main-container {
